--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,21 +1,267 @@
 :root{
     /* Colores */
-    --azulCielo:#7cf6fd;
-    --azulMarino:#317ac7;
-    --amarillo:#fcf9bf;
-    --gris:#707d9d;
+    --azulCielo:#22b6eb;
+    --azulMarino:#0145c1;
+    --azulOscuro:#002881;
+    --verdeAgua:#00b8c8;
+    --morado:#012054;
     --blanco:#fff;
     --negro:#000;
+    --grisClaro:#757575;
 
     /* Fuente Principal */
     --fuentePrincipal:'Gothic A1', sans-serif;
 }
-
+/* Globales */
 html{
+    font-size: 62.5%;
     font-family: var(--fuentePrincipal);
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
+  }
+  
+body{
+    font-size: 16px;/*1rem= 10px*/
+    /* background-image: linear-gradient(to top,var(--azulMarino) 0%, var(--blanco) 100% ); */
+}
+/* Tipografia */
+h1{
+    font-size: 4rem;
+}
+h2{
+    font-size: 3rem;
+}
+h3{
+    font-size: 2rem;
+}
+p{
+    font-size: 1.8rem;
+}
+h1,h2,h3,h4{
+    text-align: center;
+}
+a{
+    text-decoration: none;
 }
 
-
+/* Titulos */
 .titulo{
+    color: var(--azulOscuro);
+}
+main h2{
+    color: var(--blanco);
+}
+/* Utilerias */
+.contenedor{
+    max-width: 120rem;
+    margin: 0 auto;
+}
+.boton{
+    background-color: var(--azulMarino);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 3rem;
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    border-radius: .5rem;
+    width: 90%;
     text-align: center;
+    border: none; 
+    
+}
+@media (min-width: 768px) {
+    .boton{
+        width: auto;
+    }   
+}
+.boton:hover{
+    cursor: pointer;
+}
+
+.w-sm-100{
+    width: 100%;
+}
+@media (min-width: 768px) {
+    .w-sm-100{
+        width: auto;
+    }  
+}
+.flex{
+    display: flex;
+}
+.alinear-derecha{ 
+    justify-content: flex-end;
+}
+.sombra{
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);
+    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);
+    background-color: var(--azulMarino);
+    padding: 2rem;
+    border-radius: .5rem;
+}
+
+/* Navegacion */
+.bg-nav{
+    background-color: var(--azulMarino);
+}
+/* elemento padre al cual le aplicamos flexblox */
+.navegacion-principal{
+    display: flex;
+    flex-direction: column;
+}
+/* Media Querie Navegacion */
+@media (min-width: 768px) {
+    .navegacion-principal{
+        flex-direction:row;
+        justify-content: space-between;
+    }
+}
+.navegacion-principal a{
+    display: block;
+    text-align: center;
+    padding: 1rem;
+    color: var(--blanco);
+    font-size: 2rem;
+    font-weight: 700;
+}
+.navegacion-principal a:hover{
+    background-color: var(--blanco);
+    color: var(--azulOscuro);
+}
+
+/* Hero */
+.hero{
+    background-image: url(/img/fondo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* background-position: center center; */
+    height: 45rem;
+    padding: 2rem;
+    position: relative;
+    margin-bottom: 2rem;
+    
+}
+.contenido-hero{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.contenido-hero h2, p{
+    color: var(--blanco);
+}
+
+/* Servicios */
+@media (min-width: 768px) {
+    .servicios{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        column-gap: 1rem;
+    } 
+}
+
+.servicio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.servicio h3{
+    color: var(--blanco);
+    font-weight: 400;
+}
+.servicio p{
+    text-align: center;
+    line-height: 2;
+}
+.servicio .iconos{
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--verdeAgua);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/* formulario */
+.formulario{
+    background-color: var(--grisClaro);
+    width: min(60rem, 100%);/**Utiliza el valor mas pequeño**/
+    margin: 0 auto;
+    padding:2rem;
+    border-radius: 1rem;
+}
+.formulario fieldset{
+    border: none;
+}
+.formulario legend{
+    color: var(--blanco);
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+/* Campos */
+@media (min-width: 768px) {
+    .contenedor-campos{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 1rem;
+        grid-template-rows: auto auto 20rem;
+    } 
+}
+
+.campo:nth-child(3),
+.campo:nth-child(4){
+    grid-column: 1/3;
+}
+
+.campo{
+    margin-bottom: 1rem;
+}
+.campo label{
+    color: var(--blanco);
+    font-weight: 900;
+    margin-bottom: .5rem;
+    display: block;
+}
+
+.campo textarea{
+    height: 20rem;
+}
+
+.campo input{
+
+}
+
+/* Inputs */
+.input-text{
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: 1.5rem;
+}
+.enviar .boton{
+    width: 100%;
+}
+
+/* Footer */
+.footer{
+    background-color: var(--grisClaro);
+    text-align: center;
+    padding: 1rem;
+    
+}
+.footer p{
+    color: var(--azulOscuro);
+    font-size: 2rem;
 }
